--- a/meadiapickerlib/build.gradle
+++ b/meadiapickerlib/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'maven-publish'
 
 android {
     compileSdkVersion 28
@@ -21,7 +22,10 @@ android {
         }
     }
 }
-
+publishing {
+    version = '1.0'
+    description = 'A select media Image/Video file library for android.'
+}
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
